--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -47,8 +47,8 @@
                                 <i class="icono-calendar"></i>
                                 <span class="text-success"
                                       th:text="${#temporals.format(eventAndStatus.key.date.toLocalDate(), 'dd.MM.yyyy')}">&nbsp;13.03.2020</span>
-                                <span class="text-success"
-                                      th:text="${#temporals.format(eventAndStatus.key.date.toLocalTime(), 'HH:mm')}">&nbsp;19:30</span>
+                                <span class="text-dark"
+                                      th:text="${' ~ '+#temporals.format(eventAndStatus.key.date.toLocalTime(), 'HH:mm')+' Uhr'}">&nbsp;19:30</span>
                             </div>
                         </div>
                     </div>
@@ -57,9 +57,11 @@
                             <div class="col-12">
                                 <img src="../../static/icons/icon-time-clock.png"
                                      th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
-                                <span>&nbsp;Abgabefrist</span>
-                                <span th:text="${eventAndStatus.key.getDeadlineDate()}">&nbsp;13.03.2020</span>
-                                <span th:text="${eventAndStatus.key.getDeadlineTime()}">&nbsp;19:30</span>
+                                <span class="font-weight-bold">&nbsp;Abgabefrist</span>
+                                <span th:text="${eventAndStatus.key.getDeadlineDate()}"
+                                      class="text-danger">&nbsp;13.03.2020</span>
+                                <span th:text="${' ~ '+ eventAndStatus.key.getDeadlineTime()+' Uhr'}"
+                                      class="text-dark">&nbsp;19:30</span>
                             </div>
                         </div>
                     </div>
@@ -80,7 +82,7 @@
                     </div>
                 </div>
                 <div class="row border-bottom  mx-1 my-1 align-content-center">
-                    <div class="col-12 text-secondary text-center  my-1">
+                    <div class="col-12 text-secondary text-center  my-2">
                         <h2 class="font-weight-bold" th:text="${eventAndStatus.key.title}">
                             Double Feature: Webanwendungen mit MVC 1.0 / Typparameter
                         </h2>
