--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -11,11 +11,13 @@
               crossorigin="anonymous"
               th:remove="all">
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
+        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
     </th:block>
 </head>
 <body>
 <header>
-    <nav class="navigation navigation-secondary" is="mops-navigation" th:fragment="navigation">
+    <nav class="navigation navigation-secondary" is="mops-navigation" th:fragment="navigation"
+         style="border-right: 1px solid #aaaaaa;">
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li>
@@ -31,23 +33,29 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent">
+<main th:fragment="bodycontent"
+      th:style="'background: url(/images/back.jpg) center center fixed; font-family: Raleway, sans-serif; background-size:cover;'"
+      class="overflow-hidden">
     <!-- Restlichen Inhalt hier einfügen! -->
-    <h1 class="text-center text-secondary"> CP beantragen</h1>
+    <h1 class="text-center text-secondary font-weight-bold pt-4"
+        style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;"> CP beantragen <img
+            src="../../static/icons/cp.png"
+            th:src="@{/icons/cp.png}"
+            style="width: 42px;height: 42px; margin-bottom: 20px;"></h1>
 
     <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px"
          th:if="${eventsExist}">
-        <table class="table table-borderless">
+        <table class="table table-borderless rounded">
             <thead>
-            <tr>
-                <th>Veranstaltungen für CP</th>
-                <th>Eventtyp</th>
+            <tr style="font-size: 19px">
+                <th scope="col">Veranstaltungen für CP</th>
+                <th scope="col">Eventtyp</th>
             </tr>
             </thead>
             <tbody th:remove="all-but-first">
             <tr th:each="event: ${events}">
-                <td th:text="${event.title}">Double Feature: Webanwendungen mit MVC 1.0 / Typparameter</td>
-                <td th:text="${event.type}">Abendveranstaltung</td>
+                <td th:text="${event.title}" scope="row">Double Feature: Webanwendungen mit MVC 1.0 / Typparameter</td>
+                <td th:text="${event.type}" scope="row">Abendveranstaltung</td>
             </tr>
             <tr>
                 <td>Double Feature: Webanwendungen mit MVC 1.0 / Typparameter (2)</td>
@@ -58,7 +66,7 @@
         <div th:if="${!disabled}">
             <form action="/rheinjug2/student/creditpoints/certificateform" method="GET" id="getForm">
                 <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
-                <button type="submit" class="btn col-12 btn-outline-success" name="second"
+                <button type="submit" class="btn col-12 btn-outline-primary" name="second"
                         th:disabled="${disabled}"> CP Beantragen
                 </button>
             </form>
@@ -76,7 +84,8 @@
     <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px"
          th:if="${!exists  || !eventsExist}">
         <div class="row border-bottom  mx-1 my-md-5 justify-content-center">
-            <p class="font-weight-bold text-dark"> Es gibt keine Veranstaltungen zur Beantragung von CPs </p>
+            <p class="font-weight-bold text-dark"> Es gibt keine Veranstaltungen zur Beantragung
+                von CPs </p>
         </div>
     </div>
 </main>
