--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -84,7 +84,7 @@
             </div>
             <div class="form-group">
                 <label for="wmd-input">Inhalt</label>
-                <textarea class="wmd-input" id="wmd-input" name="Inhalt"
+                <textarea class="wmd-input" id="wmd-input" name="Inhalt" style="font-size: 17px;"
                           placeholder="Zusammenfassung hier schreiben..." th:field="*{content}"
                           form="mysubmit"> </textarea>
                 <p></p>
