--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -29,12 +29,18 @@
 </header>
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
-    <form action="#" method="POST" th:action="@{/rheinjug2/orga/events}">
-        <button class="btn btn-outline-secondary btn-block" type="submit">
-            Veranstaltungen aktualisieren
-        </button>
-    </form>
-    <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
+    <div class="row justify-content-end">
+        <div class="col-4">
+            <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
+        </div>
+        <div class="col-4">
+            <form action="#" method="POST" th:action="@{/rheinjug2/orga/events}">
+                <button class="btn btn-outline-secondary btn-block" type="submit">
+                    Veranstaltungen aktualisieren
+                </button>
+            </form>
+        </div>
+    </div>
     <div th:remove="all-but-first" th:each="event : ${events}">
         <div class="container bg-light rounded shadow-lg " style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
             <div class="row border-bottom  mx-1 my-1 align-content-center">
