Remove background image

--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -35,9 +35,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent"
-      th:style="'background: url(/images/back.jpg) center center fixed; font-family: Raleway, sans-serif; background-size:cover;'"
-      class="overflow-hidden mx-auto px-0">
+<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;">Belegte Veranstaltungen</h1>
