--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -33,9 +33,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent"
-      th:style="'background: url(/images/back.jpg) center center fixed; font-family: Raleway, sans-serif; background-size:cover;'"
-      class="overflow-hidden">
+<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary font-weight-bold pt-4"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;"> CP beantragen <img
