--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -46,9 +46,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent"
-      th:style="'background: url(/images/back.jpg) center center fixed; font-family: Raleway, sans-serif; background-size:cover;'"
-      class="overflow-hidden">
+<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;">
         Bericht Abgabe </h1>
