--- a/src/main/resources/templates/credit_points_form.html
+++ b/src/main/resources/templates/credit_points_form.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
                 th:src="@{/js/bootstrap.min.js}"></script>
-        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
     </th:block>
 </head>
 <body>
@@ -35,7 +34,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
+<main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;"> Credit Points beantragen </h1>
