--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -12,7 +12,6 @@
               th:remove="all">
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
         <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
-        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
     </th:block>
 
 </head>
@@ -35,7 +34,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
+<main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;">Belegte Veranstaltungen</h1>
