--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -25,7 +25,6 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Converter.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Editor.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Sanitizer.js"></script>
-        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
     </th:block>
 </head>
 <body>
@@ -46,7 +45,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
+<main th:fragment="bodycontent">
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;">
         Zusammenfassung Abgabe </h1>
