--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -11,7 +11,6 @@
               crossorigin="anonymous"
               th:remove="all">
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
-        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
     </th:block>
 </head>
 <body>
@@ -33,7 +32,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent" style="font-family: Raleway, sans-serif;">
+<main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary font-weight-bold pt-4"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;"> CP beantragen <img
@@ -82,7 +81,8 @@
     <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px"
          th:if="${!exists  || !eventsExist}">
         <div class="row border-bottom  mx-1 my-md-5 justify-content-center">
-            <p class="font-weight-bold text-dark"> Es gibt keine akzeptierten Zusammenfassungen, um CPs zu beantragen. </p>
+            <p class="font-weight-bold text-dark"> Es gibt keine akzeptierten Zusammenfassungen, um CPs zu
+                beantragen. </p>
         </div>
     </div>
 </main>
