--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -11,7 +11,6 @@
               crossorigin="anonymous"
               th:remove="all">
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
-        <link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet'>
         <script src="../../static/js/jquery.min.js"
                 th:src="@{/js/jquery.min.js}"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
@@ -58,9 +57,7 @@
         </ul>
     </nav>
 </header>
-<main th:fragment="bodycontent"
-     th:style="'background: url(/images/back.jpg) center center fixed; font-family: Raleway, sans-serif; background-size:cover;'"
-      class="overflow-hidden">
+<main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary pt-4 font-weight-bold"
         style="text-shadow: 10px 2px 20px white; font-size: 38px; color: #303535;"> Rheinjug Veranstaltungen </h1>
