--- a/src/main/resources/templates/orga_reports_overview.html
+++ b/src/main/resources/templates/orga_reports_overview.html
@@ -53,7 +53,7 @@
     </nav>
 </header>
 <main th:fragment="bodycontent">
-    <!-- Rtlichen Inhalt hier einfügen! -->
+    <!-- Restlichen Inhalt hier einfügen! -->
     <div id="successmessage" class=" container alert alert-success alert-dismissible"
          style="padding: 10px;"
          role="alert" th:text="${successmessage}"
